test/compile_fail/tst_05_harness_smoke_should_fail.cpp
#include "support/compile_fail_guard.h"

struct harness_smoke_case;

lumalink::json::compile_fail_support::intentionally_invalid_case<harness_smoke_case> g_case;
